@@ -5086,4 +5086,5 @@ v0.92.0.11:
   - API: Deprecated CombatUtil.preventFriendlyFire(attacker, defender).
   - Added friendlyFire setting to database as a world setting.
     - Closes #1242.
-  
+  - Made the plotManagementIgnoreIds also affect the wilderness explosion revert feature.
+  - Added FURNACE,BLAST_FURNACE,SMOKER,BREWING_STAND,TNT,AIR,FIRE,NETHER_QUARTZ_ORE to the plotManagementIgnoreIds and default config's new_world_settings.plot_management.revert_on_unclaim.block_ignore.
